@@ -3,6 +3,8 @@ Xfce 4.6beta1 (Xfce 4.5.91):
 
   * Bring back the "show icons in menu" preferences for the desktop
     menu and window list menu.
+  * Add support for XDG user dirs for the Desktop and Templates
+    directories.  Patch from Andrea Santilli <yawara@quipo.it> (bug 4365).
 
 
 Xfce 4.6alpha (Xfce 4.5.90):
